--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
     <link rel="icon" href="img/favicon.ico">
     <!-- css style-->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
+    <link rel="stylesheet" href="css/slick.min.css">
+    <link rel="stylesheet" href="css/slick-theme.min.css">
     <!--if gt IE 9-->
     <script src="js/vendor/html5shiv.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ismobilejs/0.4.1/isMobile.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script src="js/vendor/isMobile.min.js"></script>
+    <script src="js/vendor/TweenMax.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/wow/0.1.12/wow.min.js"> </script>
+    <script src="js/vendor/wow.min.js"> </script>
     <script src="js/vendor/jquery-3.2.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <script src="js/vendor/slick.min.js"></script>
     <!-- <script src="js/vendor/jquery.tubular.min.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.21/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue-scrollto"></script>
+    <script src="js/vendor/jquery-ui.min.js"></script>
+    <script src="js/vendor/vue.min.js"></script>
+    <script src="js/vendor/vue-scrollto.min.js"></script>
     <script src="js/carousel-dist.js"></script>
     <!--bootstrap-->
     <!--Optional JavaScript-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="js/vendor/popper.min.js"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
   
     <!-- own style-->
     <!-- <link rel="stylesheet" href="css/index.css"> -->
