--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
           <div class="cover"><img src="img/svg/cover.svg"/>
           </div>
           <div class="main">
-            <div class="ttBox w por draw">
+            <div class="ttBox w por draw wow fadeInUp">
               <h2>關於<br>立炘</h2><span class="deco-block draw"></span>
             </div>
-            <p> <span class="break-m"><span class="break">「立炘數位」擁有廣告數十年行銷經驗，</span><span class="break">是一間替客戶規劃傳統媒體及數位行銷的整合公司。</span></span><span class="break">我們發揮創意，挑戰改變，勇敢追求遠大目標。</span><span class="break">期許在這個數位化時代，用數據看見趨勢，</span><span class="break"> <strong>用創意進行溝通，帶來不一樣的行銷方式。</strong></span></p>
+            <p class="wow fadeInUp" data-wow-delay=".2s"> <span class="break-m"><span class="break">「立炘數位」擁有廣告數十年行銷經驗，</span><span class="break">是一間替客戶規劃傳統媒體及數位行銷的整合公司。</span></span><span class="break">我們發揮創意，挑戰改變，勇敢追求遠大目標。</span><span class="break">期許在這個數位化時代，用數據看見趨勢，</span><span class="break"> <strong>用創意進行溝通，帶來不一樣的行銷方式。</strong></span></p>
           </div>
         </section>
         <!--what we do-->
@@ -234,7 +234,7 @@
         </section>
         <!--how we do-->
         <section class="how full-h">
-          <h2 class="org">我們怎麼做數位</h2>
+          <h2 class="org wow fadeInUp">我們怎麼做數位</h2>
           <div class="howBox">
             <ul>
               <li class="wow fadeIn">
@@ -273,7 +273,9 @@
         </section>
         <!--media partner-->
         <section class="mediaPartner">
-          <h2 class="w">代理媒體</h2>
+          <span class="wow fadeInUp">
+            <h2 class="w">代理媒體</h2>
+          </span>
           <canvas id="responsive-canvas"></canvas>
         </section>
         <section class="work-video">
@@ -354,9 +356,11 @@
         </section>
         <!--rwd-->
         <section class="rwd full-h">
-          <h2>響應式設計</h2>
+          <span class="wow fadeInUp">
+            <h2>響應式設計</h2>
+          </span>
           <div class="device abs">
-            <div class="phone abs">
+            <div class="phone abs wow fadeInUp">
               <div class="cover por"><img src="img/rwd-phone.png"/>
                 <div class="slidePic abs">
                   <div class="dots abs"><span class="active"></span><span></span><span></span></div>
@@ -371,7 +375,7 @@
                 </div>
               </div>
             </div>
-            <div class="mac">
+            <div class="mac wow fadeInUp">
               <div class="cover por"><img src="img/rwd-mac.png"/>
                 <div class="slidePic abs">
                   <div class="dots abs"><span class="active"></span><span></span><span></span></div>
@@ -409,7 +413,7 @@
         <!--client-->
         <section class="client">
           <div class="arrowCube"><a class="left" href="#"><span class="icon-arrow"></span></a><a class="right" href="#"><span class="icon-arrow"></span></a></div>
-          <h2 class="org">服務客戶</h2>
+          <h2 class="org wow fadeInUp">服務客戶</h2>
           <div class="slideBox">
             <div class="logoBox">
               <ul>
@@ -447,41 +451,41 @@
         </section>
         <!--contact-->
         <section class="contact">
-          <p class="hello abs">HELLO</p>
+          <p class="hello abs wow fadeInUp">HELLO</p>
           <div class="main">
             <div class="infoBox">
-              <div class="info">
+              <div class="info wow fadeInUp">
                 <p class="por">ADDRESS</p>
                 <p>台北市中山區建國北路二段65號4樓</p>
               </div>
-              <div class="info">
+              <div class="info wow fadeInUp">
                 <p class="por">CONTACT</p>
                 <p>電話<br>02-2500-0818</p>
               </div>
             </div>
             <div class="form">
               <div class="form-info">
-                <div class="mat-div">         
+                <div class="mat-div wow fadeInUp">         
                   <label class="mat-label">姓名*</label>                        
                   <input class="mat-input" id="login_acct" type="text" autocomplete="off">
                 </div>                    
-                <div class="mat-div">             
+                <div class="mat-div wow fadeInUp">             
                   <label class="mat-label">公司</label>                        
                   <input class="mat-input" id="login_code" type="text" autocomplete="off">
                 </div>
-                <div class="mat-div">             
+                <div class="mat-div wow fadeInUp">             
                   <label class="mat-label">信箱*</label>                        
                   <input class="mat-input" id="login_code" type="text" autocomplete="off">
                 </div>
-                <div class="mat-div">             
+                <div class="mat-div wow fadeInUp">             
                   <label class="mat-label">電話</label>                        
                   <input class="mat-input" id="login_code" type="number" autocomplete="off">
                 </div>
               </div>
-              <div class="textBox">
+              <div class="textBox wow fadeInUp">
                 <textarea type="text" placeholder="詢問內容" name="contactContent" maxlength="400" required=""></textarea>
               </div>
-              <!--0125 add btn--><a class="send" href="#">GO!</a>
+              <!--0125 add btn--><a class="send wow fadeInUp" href="#">GO!</a>
             </div>
           </div>
         </section>
