--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/slick.min.css">
     <link rel="stylesheet" href="css/slick-theme.min.css">
-    <!-- <link rel="stylesheet" href="https://cdn.bootcss.com/multiscroll.js/0.2.2/jquery.multiscroll.min.css"> -->
     <!--if gt IE 9-->
     <script src="js/vendor/html5shiv.js"></script>
     <script src="js/vendor/isMobile.min.js"></script>
@@ -29,7 +28,6 @@
     <!-- <script src="js/vendor/jquery.tubular.min.js"></script> -->
     <script src="js/vendor/jquery-ui.min.js"></script>
     <script src="js/vendor/slick.min.js"></script>
-    <script src="https://cdn.bootcss.com/multiscroll.js/0.2.2/jquery.multiscroll.min.js"></script>
     <script src="js/vendor/vue.min.js"></script>
     <script src="js/vendor/vue-scrollto.min.js"></script>
     <script src="js/carousel-dist.js"></script>
@@ -118,7 +116,7 @@
             </div>
             <div class="clip"></div>
             <div class="bg">
-              <!-- <iframe src="https://www.youtube.com/embed/0rZ39S9wY-g?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=1&amp;mute=1&amp;loop=1&amp;playlist=0rZ39S9wY-g" frameborder="0" allowfullscreen=""></iframe> -->
+                <!-- <iframe src="https://www.youtube.com/embed/qWE6nlKQ-4Q?rel=0&controls=0&showinfo=0&autoplay=1&mute=1&loop=1&playlist=qWE6nlKQ-4Q" frameborder="0" allowfullscreen></iframe> -->
             </div>
           </div>
         </section>
@@ -405,7 +403,21 @@
                   <div class="play"><img src="img/svg/play.svg"/></div>
                 </a>
               </div>
-              <div class="right por">
+              <div class="right por showSlick">
+                <span>
+                  <div class="main">
+                    <h3 class="org">一個巨星的誕生 － 林版新</h3>
+                    <p>一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生</p><a class="btn" href="#">DETAIL</a>
+                  </div>
+                  <a class="more" href="#"><span>看更多案例</span><span class="line-arrow por"></span></a>
+                </span>
+                <span>
+                  <div class="main">
+                    <h3 class="org">一個巨星的誕生 － 林版新</h3>
+                    <p>一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生</p><a class="btn" href="#">DETAIL</a>
+                  </div>
+                  <a class="more" href="#"><span>看更多案例</span><span class="line-arrow por"></span></a>
+                </span>
                 <span>
                   <div class="main">
                     <h3 class="org">一個巨星的誕生 － 林版新</h3>
@@ -438,7 +450,7 @@
                 </li>
               </ul>
             </div>
-            <div class="logoBox" style="display:none">
+            <div class="logoBox">
               <ul>
                 <li><img src="img/client-far.png"/>
                 </li>
