updated slick all

--- a/index.html
+++ b/index.html
@@ -450,6 +450,7 @@
                 </li>
               </ul>
             </div>
+            <!-- 預留logo DIV -->
             <div class="logoBox">
               <ul>
                 <li><img src="img/client-far.png"/>
@@ -465,7 +466,7 @@
                 <li><img src="img/client-far.png"/>
                 </li>
               </ul>
-            </div>
+            </div> 
           </div>
         </section>
         <!--contact-->
