--- a/index.html
+++ b/index.html
@@ -403,28 +403,30 @@
                   <div class="play"><img src="img/svg/play.svg"/></div>
                 </a>
               </div>
-              <div class="right por showSlick">
-                <span>
-                  <div class="main">
-                    <h3 class="org">一個巨星的誕生 － 林版新</h3>
-                    <p>一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生</p><a class="btn" href="#">DETAIL</a>
+              <div class="right por">
+                <div class="showSlick">
+                  <div>
+                    <div class="main">
+                      <h3 class="org">一個巨星的誕生 － 林版新</h3>
+                      <p>一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生</p><a class="btn" href="#">DETAIL</a>
+                    </div>
+                    <a class="more" href="#"><span>看更多案例</span><span class="line-arrow por"></span></a>
                   </div>
-                  <a class="more" href="#"><span>看更多案例</span><span class="line-arrow por"></span></a>
-                </span>
-                <span>
-                  <div class="main">
-                    <h3 class="org">一個巨星的誕生 － 林版新</h3>
-                    <p>一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生</p><a class="btn" href="#">DETAIL</a>
+                  <div>
+                    <div class="main">
+                      <h3 class="org">一個巨星的誕生 － 林版新</h3>
+                      <p>一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生</p><a class="btn" href="#">DETAIL</a>
+                    </div>
+                    <a class="more" href="#"><span>看更多案例</span><span class="line-arrow por"></span></a>
                   </div>
-                  <a class="more" href="#"><span>看更多案例</span><span class="line-arrow por"></span></a>
-                </span>
-                <span>
-                  <div class="main">
-                    <h3 class="org">一個巨星的誕生 － 林版新</h3>
-                    <p>一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生</p><a class="btn" href="#">DETAIL</a>
+                  <div>
+                    <div class="main">
+                      <h3 class="org">一個巨星的誕生 － 林版新</h3>
+                      <p>一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生一個巨星的誕生</p><a class="btn" href="#">DETAIL</a>
+                    </div>
+                    <a class="more" href="#"><span>看更多案例</span><span class="line-arrow por"></span></a>
                   </div>
-                  <a class="more" href="#"><span>看更多案例</span><span class="line-arrow por"></span></a>
-                </span>
+                </div>
               </div>
             </div>
           </div>
