--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="vendor/TweenMax.min.js"></script>
     <script src="vendor/wow.min.js"> </script>
     <script src="vendor/jquery-3.2.1.min.js"></script>
-    <script src="vendor/jquery-ui.min.js"></script>
+    <!-- <script src="vendor/jquery-ui.min.js"></script> -->
     <script src="vendor/slick.min.js"></script>
     <script src="vendor/jquery.fancybox.min.js"></script>
     <script src="vendor/vue.min.js"></script>
@@ -31,12 +31,11 @@
     <script src="vendor/carousel.min.js"></script>
     <!--bootstrap-->
     <!--Optional JavaScript-->
-    <script src="vendor/popper.min.js"></script>
-    <script src="vendor/bootstrap.min.js"></script>
+    <!-- <script src="vendor/popper.min.js"></script>
+    <script src="vendor/bootstrap.min.js"></script> -->
   
     <!-- own style-->
-    <!-- <link rel="stylesheet" href="css/index.css"> -->
-    <link rel="stylesheet" href="css/self.css">
+    <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
     <span id="vue" v-cloak>
