--- a/work.html
+++ b/work.html
@@ -50,7 +50,7 @@
         </div>
       </div>
       <!--add '.scrolled'-->
-      <header class="scrolled"><a class="logo" href="index.html" @click.prevent="ctrlMove('body', false);"> <img src="img/svg/logo.svg" alt="logo"></a>
+      <header><a class="logo" href="index.html" @click.prevent="ctrlMove('body', false);"> <img src="img/svg/logo.svg" alt="logo"></a>
         <!-- bur-->
         <div class="button_container" id="toggle" :class="{ 'active': isOpen }" @click.prevent="isOpen = !isOpen"><span class="top"></span>  <span class="middle"></span>  <span class="bottom"></span></div>
         <!-- M Menu-->
