--- a/work.html
+++ b/work.html
@@ -88,7 +88,7 @@
       <div class="wrap">
         <div class="workBox">
           <!--add 'scrolled-ttBox'-->
-          <div class="ttBox" :class="{ 'scrolled': isScroll }">
+          <div class="ttBox" :class="{ 'scrolled-ttBox': isScroll }">
             <p class="work-tt org">OUR WORK</p>
             <div class="tabBox por tab-fixed"> 
               <ul>
